docs/7.55/md/abennews-75.md
  

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews.htm) → 

Changes in Releases 7.5x

Releases 7.5x are based on [7.40, SP08](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-740_sp08.htm).

The following table shows the ABAP releases for the ABAP Platform that is used for the SAP S/4HANA on premise (OP) releases and the associated kernel releases.

Release

ABAP Platform

OP Release

Kernel Release

[7.55](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-755.htm)

2020

2020

7.81

[7.54](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-754.htm)

1909

1909

7.77

[7.53](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-753.htm)

1809

1809

7.73

[7.52](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-752.htm)

\-

1709

7.53

[7.51](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-751.htm)

\-

1610

7.49

[7.50](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-750.htm)

\-

1511

7.45

The term [ABAP platform](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_platform_glosry.htm "Glossary Entry") was introduced with ABAP release 7.53. For the ABAP platform, there is no standalone installation available. It is shipped indirectly with products as SAP S/4HANA on premise. The release number of the ABAP platform corresponds to SAP S/4HANA on premise release.

Hint

The term "ABAP platform" replaces the usage of the term "Application Server ABAP" in SAP Netweaver which itself replaced the term "SAP Basis". Nowadays, an "ABAP platform" plays the same role for ABAP written applications as formerly the SAP basis.

Continue
[Changes in Release 7.55](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-755.htm)
[Changes in Release 7.54](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-754.htm)
[Changes in Release 7.53](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-753.htm)
[Changes in Release 7.52](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-752.htm)
[Changes in Release 7.51](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-751.htm)
[Changes in Release 7.50](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews-750.htm)