docs/7.57/md/abennews-75.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 7.5x, ABENNEWS-75, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASugg
estion for improvement:)

News for Release 7.5x

[ABAP releases](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_release_glosry.htm "Glossary Entry") 7.5x are based on [7.40, SP08](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-740_sp08.htm).

The following table shows the ABAP releases for the ABAP Platform that is used for the SAP S/4HANA on premise (OP) releases and the associated ABAP kernel releases.

Release

ABAP Platform

OP Release

Kernel Release

[7.57](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-757.htm)

2022

2022

789

[7.56](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-756.htm)

2021

2021

785

[7.55](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-755.htm)

2020

2020

781

[7.54](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-754.htm)

1909

1909

777

[7.53](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-753.htm)

1809

1809

773

[7.52](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-752.htm)

\-

1709

753

[7.51](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-751.htm)

\-

1610

749

[7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750.htm)

\-

1511

745

The term ABAP Platform was introduced with ABAP release 7.53. For the ABAP Platform, there is no standalone installation available for the 7.5x ABAP releases. It is shipped indirectly with products as SAP S/4HANA on premise. The release number of the ABAP Platform corresponds to the SAP S/4HANA on premise release.

Hint

The term "ABAP Platform" replaces the usage of the term "Application Server ABAP" in SAP NetWeaver which itself replaced the term "SAP Basis". Nowadays, an "ABAP Platform" plays the same role for ABAP written applications as formerly the SAP basis.

Continue
[News for Release 7.57](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-757.htm)
[News for Release 7.56](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-756.htm)
[News for Release 7.55](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-755.htm)
[News for Release 7.54](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-754.htm)
[News for Release 7.53](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-753.htm)
[News for Release 7.52](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-752.htm)
[News for Release 7.51](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-751.htm)
[News for Release 7.50](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-750.htm)